# contractgate

./: .dockerignore  .env.example  .gitignore  BROWSER_TEST_REPORT_2026-04-20.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HAIKU-TEST-PROMPTS-2026-05-24.md  LICENSE  MAINTENANCE_LOG.md  Makefile  NOTICE  README.md  REVIEW-2026-05-16-saas-readiness.md  REVIEW-2026-05-22-launch-readiness.md  REVIEW-2026-07-09-maintenance-sweep.md  SECURITY.md  TEST-PLAN-2026-05-24-public-launch.md  about.toml  deny.toml  docker-compose.kafka-demo.yml  docker-compose.yml  fly.toml  mri_property_listing.yaml  mri_tenancy_event.yaml  package-lock.json  rustfmt.toml  test_live.sh  vercel.json
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  contractgate.yml  migration-drift.yml  release.yml
confluent-connector/: README.md  kafka-connect-contractgate-0.1.0.zip.asc  manifest.json  pom.xml
confluent-connector/config/: contractgate-validator.properties
contracts/examples/: user_events.yaml
contracts/starters/: README.md  dbt_model.yaml  kafka_event.yaml  rest_event.yaml
dashboard/: .env.example  Dockerfile  middleware.ts  next-env.d.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tailwind.config.ts  tsconfig.json
dashboard/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard/components/: AuthGate.tsx  ClientOrgProvider.tsx  DemoBanner.tsx  DemoFeatureUnavailable.tsx  OrgProvider.tsx  PlanGate.tsx  Sidebar.tsx  UsageWidget.tsx
dashboard/e2e/: demo.spec.ts  rfc020-dashboard-polish.spec.ts
dashboard/lib/: api.ts  demo.ts  org.ts  previews.tsx
demo/: README.md
demo/hero/: README.md  contract_v1.0.0.yaml  contract_v1.1.0.yaml  events_pass.json  events_quarantine.json
demo/scenarios/: nested.yaml  simple.yaml
demo/static/: index.html
docs/: Grok_Suggestions.txt  STATUS.md  api-workbench-reference.md  architecture-overview.md  auth-reference.md  cg-test-reference.md  collaboration-reference.md  contract-sharing-reference.md  csv-inference-reference.md  date-type-reference.md  deploy-contract-reference.md  egress-validation-reference.md  email-sending-setup.md  event-payload-storage-reference.md  health-reference.md  kafka-ingress-reference.md  key-management-reference.md  kinesis-ingress-reference.md  migration-drift-check-reference.md  pii-masking-reference.md  pilot-report-reference.md  plan-gating-reference.md  public-catalog-reference.md  quarantine-replay-reference.md  quickstart-5min.md  rag-ingestion-reference.md  scaffold-reference.md  schema-notes.md  scorecard-reference.md  security-overview.md  slack-bot-setup.md  stripe-billing-reference.md  support-sla.md  team-management-reference.md  url-inference-reference.md  usage-reference.md  v1-ingest-reference.md
docs/data-room/: README.md  about.hbs  dashboard-dependency-licenses.md  dependency-licenses.md  ip-assignment-checklist.md
docs/marketing/: README.md  collateral-list-2026-h2-customers.md
docs/odcs/: extension-strategy.md  field-mapping.md  gap-analysis.md
docs/ops/: runbook-production.md
docs/punchlist/: 01-inference-family.md  02-cli-gitops-core.md  03-breaking-change-story.md  04-observability-quick-wins.md  05-self-hosted-basics.md  06-sdk-rollout.md  07-templates-marketplace.md  08-multitenant-saas.md  2026-05-02-audit.md  2026-07-10-sonnet-worklist.md  2026-07-14-rfc081-quarantine-endpoints.md  2026-07-16-rfc078-walkthroughs.md  2026-07-16-rfc079-unify-inference.md  2026-07-16-rfc080-visual-builder-nesting.md  KICKOFF_PROMPT.md  README.md  v2.md
docs/reviews/: cheap-findings-2026-05-28 Grok.md  cheap-findings-2026-05-28 Haiku.md  dual-sell-dev-worklist-2026-07-14.md  incident-2026-07-14-jwt-crypto-provider.md  next-steps-2026-07-15.md  sale-readiness-review-2026-05-28.md  test-hardening-handoff-2026-05-28.md
docs/rfcs/: 001-batch-ingest.md  001-org-scoped-tenancy-verification.md  001-org-scoped-tenancy.md  002-versioning.md  003-auto-retry.md  004-pii-masking.md  005-python-sdk.md  006-inference-formats.md  007-cli-gitops-core.md  008-breaking-change-story.md  009-observability-quick-wins.md  010-self-hosted-basics.md  011-sdk-rollout.md  012-templates-marketplace.md  013-multitenant-saas.md  014-cli-core.md  015-breaking-change-demo.md  016-observability-v1.md  023-demo-mode.md  (+71 more)
internal-admin/: .env.example  README.md  middleware.ts  next.config.mjs  package.json
marketing/: index.html  privacy.html  terms.html
reddit-bot/: .env.example  Dockerfile  README.md  answer.py  main.py  monitor.py  poster.py  requirements.txt
scripts/: backfill_schema_migrations.sql  check-coverage.sh  check_migration_drift.sh  demo_mri.sh  hero_demo.sh  perf_metering_smoke.sh  refresh_example_freshness.py  test-db-up.sh
sdks/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdks/python/src/contractgate/: __init__.py  _transport.py  async_client.py  client.py  contract.py  exceptions.py  models.py  validator.py
sdks/python/tests/: conftest.py  test_client_async.py  test_client_sync.py  test_contract_parse.py  test_validator.py
sdks/python/tests/fixtures/contracts/: compliance_mode.yaml  user_events.yaml  with_transform.yaml
src/: api_key_auth.rs  collaboration.rs  conformance.rs  contract.rs  egress.rs  error.rs  fork_filter.rs  idempotency.rs  infer.rs  infer_avro.rs  infer_csv.rs  infer_diff.rs  infer_openapi.rs  infer_proto.rs  infer_url.rs  ingest.rs  jwt_auth.rs  kafka_consumer.rs  kafka_ingress.rs  kinesis_consumer.rs  kinesis_ingress.rs  lib.rs  main.rs  metering.rs  metrics.rs  observability.rs  odcs.rs  plan.rs  public_catalog.rs  publication.rs  quarantine.rs  rag_contract_tests.rs  rate_limit.rs  replay.rs  report.rs  scaffold_handler.rs  scorecard.rs  settings.rs  storage.rs  stream_demo.rs  (+5 more)
tests/: cli_push_pull.rs  cli_test_dryrun.rs  cli_validate.rs  compose.isolation.yml  compose_demo_smoke.sh  compose_isolation_smoke.sh  compose_smoke.sh  metrics.rs  rfc_001_isolation.rs  scaffold_integration.rs  scaffold_property.rs  starters_demo_event.rs  starters_validate.rs  v1_ingest.rs
(+236 files in other folders)
