[package]
name = "contractgate"
version = "0.1.0"
edition = "2021"
description = "High-performance semantic contract enforcement gateway (Patent Pending)"
authors = ["ContractGate Team"]

[lib]
name = "contractgate"
path = "src/lib.rs"

[[bin]]
name = "contractgate-server"
path = "src/main.rs"

[[bin]]
name = "contractgate"
path = "src/bin/contractgate.rs"

# Volume / speed demo binary — Kafka-backed end-to-end pipeline with a live
# HTML dashboard.  See `demo/README.md` for setup and usage.
#
# Gated behind the `demo` feature because rdkafka pulls in librdkafka (which
# needs cmake + a C compiler + curl headers at build time).  Keeping it off by
# default means `cargo check` / `cargo build` / `cargo test` work on any host
# that has Rust installed, with no system deps.  Build the demo explicitly with
# `cargo build --features demo --bin demo`.
[[bin]]
name = "demo"
path = "src/bin/demo.rs"
required-features = ["demo"]

[[bin]]
name = "demo-seeder"
path = "src/bin/demo-seeder.rs"

[features]
# Default build is lean: just the library + main binary.  The `demo` feature
# pulls in rdkafka (and its librdkafka build-time deps) and enables the demo
# binary.  See the `[[bin]] name = "demo"` stanza above for rationale.
default = []
demo = ["rdkafka"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Validation
regex = "1"

# PII transforms (RFC-004): HMAC-SHA256 for `kind: hash`, seeded ChaCha20
# PRNG for `mask: format_preserving`.  All three crates are pure-Rust, no
# system deps — portable across CI + sandbox builds.
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
rand_chacha = "0.9"
rand_core = "0.6"

# Data-parallel batch validation (RFC-001).  Used by the ingest handler to
# fan out a batch of events across CPU cores while keeping the tokio reactor
# free (the parallel stage runs inside `spawn_blocking`).
rayon = "1"

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
#
# rustls (not native-tls) as the TLS backend — avoids a system OpenSSL
# dependency at build time, which makes CI + sandbox builds portable and
# removes the "need libssl-dev before `cargo check` will run" paper cut.
# rustls is a pure-Rust TLS implementation and is fully compatible with
# Postgres over TLS.  See MAINTENANCE_LOG.md for the 2026-04-17 rationale.
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config / CLI
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# CLI HTTP client — blocking reqwest keeps the CLI single-threaded (no tokio
# runtime needed in the CLI binary).  rustls avoids a system OpenSSL dep,
# matching the gateway's TLS approach.
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# Glob pattern matching for the `validate` and `push` subcommands when walking
# the contracts directory.  Pure-Rust, no system deps.
glob = "0.3"

# Metrics / perf
once_cell = "1"
hdrhistogram = "7"

# Kafka transport (bundles librdkafka via cmake — needs cmake + a C compiler
# available on the build host).  Used only by the `demo` binary, and gated
# behind the `demo` feature so it is not compiled for default builds.
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }

# Random sampling for the synthetic event generator.  `small_rng` gates the
# `SmallRng` pRNG we use on the hot path (fast, no crypto guarantees — fine
# for a demo generator).
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
axum-test = "20"
tokio-test = "0.4"
serde_json = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
