[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "contractgate"
version = "0.1.0"
description = "Python SDK for ContractGate — high-performance semantic contract enforcement gateway."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ContractGate" }]
keywords = ["contract", "validation", "data-quality", "ingestion", "schema"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.25,<1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "mypy>=1.8",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://datacontractgate.com"
Source = "https://github.com/nightmoose/contractgate"

[tool.hatch.build.targets.wheel]
packages = ["src/contractgate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
